--- a/src/views/layouts/home.jade
+++ b/src/views/layouts/home.jade
@@ -6,7 +6,7 @@
     a(href="#")
       button.btn.btn-large.btn-white
         span Join Mailing List
-    a(href="#")
+    a(href="#").m-left-10
       button.btn.btn-large.btn-white.btn-outline
         span Join OrgSync
 
